--- a/grails-app/i18n/messages_zh_CN.properties
+++ b/grails-app/i18n/messages_zh_CN.properties
@@ -16,3 +16,95 @@ default.not.unique.message=[{1}]\u7C7B\u7684\u5C5E\u6027[{0}]\u7684\u503C[{2}]\u
 default.null.message=[{1}]\u7C7B\u7684\u5C5E\u6027[{0}]\u4E0D\u80FD\u4E3Anull
 default.paginate.next=\u4E0B\u9875
 default.paginate.prev=\u4E0A\u9875
+
+default.boolean.true=True
+default.boolean.false=False
+default.date.format=yyyy-MM-dd HH:mm:ss z
+default.number.format=0
+
+default.created.message={0} {1} 创建成功
+default.updated.message={0} {1} 修改成功
+default.deleted.message={0} {1} 删除成功
+default.not.deleted.message={0} {1} 无法删除
+default.not.found.message={0} 表中未发现ID为{1}的记录
+default.optimistic.locking.failure=其他用户已修改此ID({0})记录
+
+default.home.label=首页
+default.list.label={0} 列表
+default.add.label=增加 {0}
+default.new.label=新建 {0}
+default.create.label=创建
+default.show.label=显示 {0}
+default.edit.label=编辑 {0}
+default.info.label={0}信息
+
+default.button.create.label=创建
+default.button.edit.label=编辑
+default.button.update.label=修改
+default.button.delete.label=删除
+default.button.show.label=查看
+default.button.delete.confirm.message=您确定此删除操作?
+
+# Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
+typeMismatch.java.net.URL=本属性 {0} 必须是一个 URL格式
+typeMismatch.java.net.URI=本属性 {0} 必须是一个 URI
+typeMismatch.java.util.Date=本属性 {0} 必须是一个日期格式
+typeMismatch.java.lang.Double=本属性 {0} 必须是一个数字类型
+typeMismatch.java.lang.Integer=本属性 {0} 必须是一个整形数字类型
+typeMismatch.java.lang.Long=本属性 {0} 必须是一个长整形数字类型
+typeMismatch.java.lang.Short=本属性 {0} 必须是一个短整形数字类型
+typeMismatch.java.math.BigDecimal=本属性 {0} 必须是一个数字类型
+typeMismatch.java.math.BigInteger=本属性 {0} 必须是一个整形数字类型
+
+
+default.import.label= Excel导入
+default.submit.label=提交
+default.close.label=关闭
+default.sucess.label=操作成功！
+default.fault.label=操作失败！
+default.button.back.label=返回
+
+msFile.label=文件表
+msFile.clientPath.label=客户端路径
+msFile.dateCreated.label=创建时间
+msFile.fileName.label=名称
+msFile.fileSize.label=大小
+msFile.lastUpdated.label=修改时间
+msFile.md5.label=Md5
+msFile.msProject.label=隶属项目
+msFile.percent.label=完成比率
+msFile.serverPath.label=服务器路径
+msFile.smallFileNum.label=文件块数目
+msFile.uploaded.label=上传成功
+
+msProject.label=项目表
+msProject.dateCreated.label=创建时间
+msProject.files.label=下属文件
+msProject.lastUpdated.label=修改时间
+msProject.msUser.label=操作人员
+msProject.projectName.label=名称
+msProject.remark.label=描述
+msProject.rigName.label=井场名称
+
+msRole.label=角色表
+msRole.remark.label=描述
+msRole.roleName.label=名称
+
+msSmallFile.label=文件块
+msSmallFile.clientPath.label=客户端路径
+msSmallFile.dateCreated.label=创建时间
+msSmallFile.fileName.label=名称
+msSmallFile.fileSize.label=大小
+msSmallFile.lastUpdated.label=修改时间
+msSmallFile.md5.label=Md5
+msSmallFile.msFile.label=隶属文件
+msSmallFile.serverPath.label=服务器路径
+msSmallFile.splitNum.label=排序数
+msSmallFile.uploaded.label=上传成功
+
+msUser.label=用户表
+msUser.msRole.label=角色
+msUser.rigName.label=井场名称
+msUser.userName.label=用户名
+msUser.userPwd.label=密码
+
